--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,12 @@ h3 {
   font-weight: bold;
 }
 
+@media only screen and (max-width: 825px){
+  html {
+    font-size: 14px;
+  }
+}
+
 /*navbar*/
 
 .navbar {
@@ -29,6 +35,7 @@ h3 {
   height: 4rem;
   align-items: center;
   margin-top: -.5rem;
+  z-index: 3;
 }
 
 .nav a:link {
@@ -75,11 +82,37 @@ h3 {
   color: #a6a6a6;
 }
 
-.logo {
+.logo{
   display: flex;
   flex-flow: row;
   align-items: center;
   margin-left: 1.33rem;
+}
+
+.mobile {
+  display: none;
+}
+
+
+@media only screen and (max-width: 825px){
+  .logo,
+  .nav {
+    display: none;
+  }
+
+  .mobile {
+    display: flex;
+    flex-flow: row;
+    position: fixed;
+    width: 90%;
+    background-color: white;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: .25rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
 }
 
 /*banner*/
@@ -92,6 +125,7 @@ h3 {
   padding-top: 5rem;
   padding-left: 1.33rem;
   padding-bottom: 2rem;
+  z-index: 2;
 }
 
 .banner img {
@@ -107,7 +141,7 @@ h3 {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 0;
+  margin: 0 1rem 0 0;
   background-color: #404040;
   color: white;
   border-radius: 5px;
@@ -134,7 +168,31 @@ h3 {
   text-decoration: none;
 }
 
+@media only screen and (max-width:825px) {
+  .banner {
+    display: flex;
+    flex-flow: column;
+    padding-left: 0;
+  }
+
+  .banner img {
+    width: 100%;
+    margin-top: -2rem;
+  }
+
+  #bannertext {
+    width: 85%;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+}
+
 /*info section*/
+
+.imgmobile,
+.titlemobile {
+  display: none;
+}
 
 .info {
   display: flex;
@@ -223,6 +281,51 @@ h3 {
    box-shadow:         inset 0 0 10px #cccccc;
  }
 
+ @media only screen and (max-width: 825px){
+   .mainimg,
+   .imgdesktop,
+   .titledesk {
+     display: none;
+   }
+
+   .imgmobile,
+   .titlemobile {
+     display: flex;
+     width: 100%;
+   }
+
+   .info {
+     margin-left: 0;
+   }
+
+   .orientation,
+   .campus,
+   .guest {
+     flex-flow: column;
+     width: 100%;
+   }
+
+   .orientation img,
+   .campus img,
+   .guest img {
+     width: 250%;
+     padding-left: 0;
+     padding-right: 0;
+   }
+
+   .text {
+     padding-left: 1.3rem;
+     width: 200%
+   }
+
+   #guest {
+     background-color: white;
+   }
+
+
+
+ }
+
 /*start learning section*/
 
 .title {
@@ -260,6 +363,28 @@ h3 {
 div.desc {
   padding: 15px;
   font-size: 85%;
+}
+
+@media only screen and ( max-width: 825px) {
+
+  .gallery {
+    display: none;
+  }
+
+  .startlearning {
+    display: flex;
+    flex-flow:column;
+    padding: 0;
+    width: 100%;
+  }
+
+  .mobilebutton {
+    background-color: #d9d9d9;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 16px;
+    margin-top: 8px;
+  }
 }
 
 /*exhibit*/
@@ -314,6 +439,27 @@ div.desc {
   width: 60%;
 }
 
+
+@media only screen and (max-width:825px) {
+  .column2 {
+    display: none;
+  }
+
+  .video h3,
+  .video p {
+    display: none;
+  }
+
+  .video {
+    width: 100%;
+    padding-left: 0;
+    margin-left: -17px;
+  }
+
+  #exhibit {
+    padding-bottom: 0;
+  }
+}
 /*copyright*/
 
 footer {
@@ -350,6 +496,14 @@ footer {
 
 .terms a:active{
   color:#ff6666;
+}
+
+@media only screen and (max-width: 825px) {
+  footer {
+    width: 60%;
+  }
+
+
 }
 
 
